// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrSelectableSurface > component unit tests > default component with no configuration > renders correctly 1`] = `
<button
  aria-checked="false"
  class="cdr-surface-selection cdr-surface-selection--modifier-default"
  modifier="default"
  orientation="horizontal"
  role="radio"
  tag="button"
  type="button"
>
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-surface-selection-layout cdr-surface-selection-layout--horizontal cdr-surface-selection__layout"
    >
      <!-- @slot Where all default content should be placed.
      Elements are placed within a flex box. -->
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      <!-- @slot This slot allows for custom loading content. -->
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
</button>
`;

exports[`CdrSelectableSurface > is checked 1`] = `
<button
  aria-checked="true"
  class="cdr-surface-selection cdr-surface-selection--modifier-default"
  modifier="default"
  orientation="horizontal"
  role="radio"
  tag="button"
  type="button"
>
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-surface-selection-layout cdr-surface-selection-layout--horizontal cdr-surface-selection__layout"
    >
      <!-- @slot Where all default content should be placed.
      Elements are placed within a flex box. -->
      
      <!-- @slot Where all default content should be placed. -->
      
      Default slot
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      <!-- @slot This slot allows for custom loading content. -->
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
</button>
`;

exports[`CdrSelectableSurface > is loading 1`] = `
<button
  aria-checked="false"
  class="cdr-surface-selection cdr-surface-selection--modifier-default"
  data-loading="true"
  modifier="default"
  orientation="horizontal"
  role="radio"
  tag="button"
  type="button"
>
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-surface-selection-layout cdr-surface-selection-layout--horizontal cdr-surface-selection__layout"
    >
      <!-- @slot Where all default content should be placed.
      Elements are placed within a flex box. -->
      
      <!-- @slot Where all default content should be placed. -->
      
      Default slot
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      <!-- @slot This slot allows for custom loading content. -->
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
</button>
`;

exports[`CdrSelectableSurface > shows default 1`] = `
<button
  aria-checked="false"
  class="cdr-surface-selection cdr-surface-selection--modifier-default"
  modifier="default"
  orientation="horizontal"
  role="radio"
  tag="button"
  type="button"
>
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-surface-selection-layout cdr-surface-selection-layout--horizontal cdr-surface-selection__layout"
    >
      <!-- @slot Where all default content should be placed.
      Elements are placed within a flex box. -->
      
      <!-- @slot Where all default content should be placed. -->
      
      Default slot
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      <!-- @slot This slot allows for custom loading content. -->
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
</button>
`;

exports[`CdrSelectableSurface > snapshot test > renders correctly 1`] = `
<button
  aria-checked="false"
  class="cdr-surface-selection cdr-surface-selection--modifier-default"
  modifier="default"
  orientation="horizontal"
  role="radio"
  tag="button"
  type="button"
>
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-surface-selection-layout cdr-surface-selection-layout--horizontal cdr-surface-selection__layout"
    >
      <!-- @slot Where all default content should be placed.
      Elements are placed within a flex box. -->
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      <!-- @slot This slot allows for custom loading content. -->
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
</button>
`;
